Resolves: tdf#157258 "Always autocorrect to" deletes the word

instead of replacing it, affecting extensions like Grammalecte,
LanguageTool, Antidote

this began in:

commit afa35742a4633db31b6d6c72cf45741506e9edfb
Date:   Sat Dec 11 21:09:39 2021 +0000

    prefer more css::awt::XPopupMenu api

but the underlying trap was introduced in:

commit 6c84dc18062ec6aad71fd65a409373c274402991
Date:   Wed Oct 6 10:16:39 2010 +0100

    initial commit for vba blob ( not including container_control stuff )

which added creating a VCLXPopupMenu in VCLXMenu::getPopupMenu if there
was a vcl PopupMenu in the vcl Menu which hadn't been created by calling
VCLXMenu::setPopupMenu. That didn't take into account that VCLXPopupMenu
(like VCLXMenu) takes ownership of the PopupMenu and will destroy it in
its own dtor, so the sub menu Popup get destroyed if the VCLXPopupMenu
is shorter lived than the VCLXMenu wrapping the parent Menu.

Change-Id: Ic28c27670d846ee9d2ff77d834e43fc157924eb6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165484
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 161bcfa1c8687570acde0947b0350c70e7021d85)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165613